# woe_encoder_cpp

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: simple_bm.py
src/: CMakeLists.txt  fast_woe_encoder.cc  fast_woe_encoder.h  main.cc
src/fast_woe_encoder/: __init__.py
src/woe_encoder_cpp/: __init__.py
