[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "fast_woe_encoder"
version = "0.1.0"
description = "Fast Weight of Evidence Encoder"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"} # UPDATE THESE
]
dependencies = [
    "numpy",
    "scikit-learn",
    "pybind11"
]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
minimum-version = "build-system.requires"
cmake.source-dir = "src"