[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "woe_encoder_cpp"
version = "0.1.0"
description = "C++ implementation of Weight of Evidence Encoder"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Eduardo Kapp", email = "eduardobkapp@gmail.com"}
]
dependencies = [
    "numpy",
    "scikit-learn",
    "pybind11"
]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
minimum-version = "build-system.requires"
cmake.source-dir = "src"